--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Satvi Shukla Resume</title>
+    <title>Satvi Shukla | Resume</title>
+
+    <style>
+        body {
+            background-color: #eef2f7;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            width: 80%;
+            margin: auto;
+            background-color: white;
+            padding: 20px;
+            margin-top: 40px;
+            box-shadow: 0px 0px 10px gray;
+        }
+
+        h1 {
+            color: #2c3e50;
+        }
+
+        h2 {
+            color: #34495e;
+            border-bottom: 2px solid #3498db;
+        }
+
+        p, li {
+            color: #555;
+            font-size: 16px;
+        }
+
+        hr {
+            border: 1px solid #ddd;
+        }
+    </style>
 </head>
 
 <body>
 
+<div class="container">
+
 <h1>Satvi Shukla</h1>
-<p>First Year B.Tech Student</p>
+<p><b>First-Year B.Tech Student</b></p>
 <p>Electronics (VLSI & Design)</p>
 <p>Banasthali Vidyapith</p>
 
@@ -15,30 +53,30 @@
 
 <h2>About Me</h2>
 <p>
-I am a first-year B.Tech student at Banasthali Vidyapith, studying Electronics with VLSI and Design.
-I am learning programming and electronics fundamentals.
+I am a first-year B.Tech student specializing in Electronics (VLSI & Design) at Banasthali Vidyapith.
+I am learning programming and electronics fundamentals and building my skills step by step.
 </p>
 
 <hr>
 
 <h2>Education</h2>
-<p>B.Tech in Electronics (VLSI & Design)</p>
+<p><b>B.Tech in Electronics (VLSI & Design)</b></p>
 <p>Banasthali Vidyapith</p>
 <p>First Year</p>
 
 <hr>
 
-<h2>Skills</h2>
+<h2>Technical Skills</h2>
 <ul>
-<li>Java Programming (Beginner)</li>
-<li>C Programming (Beginner)</li>
+    <li>Java Programming (Beginner)</li>
+    <li>C Programming (Beginner)</li>
 </ul>
 
 <hr>
 
-<h2>Certification</h2>
+<h2>Certification & Achievement</h2>
 <ul>
-<li>State Level Volleyball Player</li>
+    <li>State Level Volleyball Player</li>
 </ul>
 
 <hr>
@@ -49,7 +87,9 @@ I am learning programming and electronics fundamentals.
 <hr>
 
 <h2>Contact</h2>
-<p>Email: write-your-email-here</p>
+<p>Email: satvi.shukla01@gmail.com</p>
+
+</div>
 
 </body>
 </html>
