--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Satvi Shukla | Resume</title>
+    <title>Satvi Shukla | Resume Website</title>
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
     <style>
         body {
-            background-color: #eef2f7;
-            font-family: Arial, sans-serif;
+            background-color: #f2f6fc;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
         }
@@ -15,27 +18,46 @@
             width: 80%;
             margin: auto;
             background-color: white;
-            padding: 20px;
+            padding: 30px;
             margin-top: 40px;
-            box-shadow: 0px 0px 10px gray;
+            box-shadow: 0px 8px 20px rgba(0,0,0,0.1);
+            border-radius: 8px;
         }
 
         h1 {
-            color: #2c3e50;
+            color: #1f3c88;
+            font-size: 36px;
+            margin-bottom: 5px;
         }
 
         h2 {
-            color: #34495e;
-            border-bottom: 2px solid #3498db;
+            color: #1f3c88;
+            border-bottom: 3px solid #4a69bd;
+            padding-bottom: 5px;
+            margin-top: 30px;
         }
 
         p, li {
-            color: #555;
+            color: #444;
             font-size: 16px;
+            line-height: 1.6;
         }
 
-        hr {
-            border: 1px solid #ddd;
+        .intro {
+            font-size: 17px;
+            color: #333;
+            margin-top: 10px;
+        }
+
+        .contact {
+            background-color: #eef3ff;
+            padding: 15px;
+            border-radius: 6px;
+            margin-top: 20px;
+        }
+
+        ul {
+            margin-left: 20px;
         }
     </style>
 </head>
@@ -44,50 +66,44 @@
 
 <div class="container">
 
-<h1>Satvi Shukla</h1>
-<p><b>First-Year B.Tech Student</b></p>
-<p>Electronics (VLSI & Design)</p>
-<p>Banasthali Vidyapith</p>
+    <h1>Satvi Shukla</h1>
+    <p><b>First-Year B.Tech Student | Electronics (VLSI & Design)</b></p>
+    <p>Banasthali Vidyapith</p>
 
-<hr>
+    <p class="intro">
+        I am a motivated and enthusiastic first-year B.Tech student with a strong interest in learning
+        programming and core electronics concepts. I am eager to explore the world of coding and technology,
+        continuously improve my skills, and apply my knowledge through practical projects and hands-on learning experiences.
+    </p>
 
-<h2>About Me</h2>
-<p>
-I am a first-year B.Tech student specializing in Electronics (VLSI & Design) at Banasthali Vidyapith.
-I am learning programming and electronics fundamentals and building my skills step by step.
-</p>
+    <div class="contact">
+        <p><b>Email:</b> satvi.shukla01@gmail.com</p>
+        <p><b>Phone:</b> 9026372726</p>
+    </div>
 
-<hr>
+    <h2>Education</h2>
+    <p><b>Bachelor of Technology (B.Tech)</b></p>
+    <p>Electronics (VLSI & Design)</p>
+    <p>Banasthali Vidyapith</p>
+    <p>First Year</p>
 
-<h2>Education</h2>
-<p><b>B.Tech in Electronics (VLSI & Design)</b></p>
-<p>Banasthali Vidyapith</p>
-<p>First Year</p>
+    <h2>Technical Skills</h2>
+    <ul>
+        <li>Java Programming (Beginner)</li>
+        <li>C Programming (Beginner)</li>
+    </ul>
 
-<hr>
+    <h2>Certifications & Achievements</h2>
+    <ul>
+        <li>State Level Volleyball Player</li>
+    </ul>
 
-<h2>Technical Skills</h2>
-<ul>
-    <li>Java Programming (Beginner)</li>
-    <li>C Programming (Beginner)</li>
-</ul>
-
-<hr>
-
-<h2>Certification & Achievement</h2>
-<ul>
-    <li>State Level Volleyball Player</li>
-</ul>
-
-<hr>
-
-<h2>Project</h2>
-<p>Personal Resume Website using GitHub Pages</p>
-
-<hr>
-
-<h2>Contact</h2>
-<p>Email: satvi.shukla01@gmail.com</p>
+    <h2>Projects</h2>
+    <p>
+        <b>Personal Resume Website</b><br>
+        Designed and developed a personal resume website using HTML and CSS, and hosted it on GitHub Pages
+        to showcase academic background, skills, and achievements.
+    </p>
 
 </div>
 
